--- a/styles.css
+++ b/styles.css
@@ -337,7 +337,7 @@ h2 {
   justify-content: center;
   top: 180px;
   cursor: pointer;
-  margin-bottom: 700px;
+  
 
   & p {
     color: #d3d3d3;
@@ -357,15 +357,18 @@ h2 {
   display: flex;
   gap: 100px;
   font-size: 20px;
-  max-height: 700px;
 }
 
 .Skills {
   position: relative;
   padding: 50px 50px;
-  height: 650px;
   bottom: 20px;
   transition: 1.5s;
+}
+
+.Education{
+  position: relative;
+  height: 650px;
 }
 
 .h {
